--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "sanitize-filename": "^1.6.1",
     "ts-node-dev": "^1.0.0-pre.39",
     "typescript": "^3.4.5"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
